# space_robot

./: .gitignore  README.md
pybullet/: main.py
pybullet/urdf/space_robot_with_mass_6/: CMakeLists.txt  package.xml
pybullet/urdf/space_robot_with_mass_6/config/: joint_names_space_robot_with_mass_6.yaml
pybullet/urdf/space_robot_with_mass_6/launch/: display.launch  gazebo.launch
pybullet/urdf/space_robot_with_mass_6/meshes/: base_link.STL  dui_jie_huan.STL  fan_ban.STL  lian_gan.STL  link11.STL  link12.STL  link13.STL  link14.STL  link15.STL  link16.STL  link17.STL  link21.STL  link22.STL  link23.STL  link24.STL  link25.STL  link26.STL  link27.STL  tian_xian.STL  wai_ke.STL  wei_pen_guan.STL
pybullet/urdf/space_robot_with_mass_6/urdf/: space_robot_with_mass_6.csv  space_robot_with_mass_6.urdf
pybullet/urdf/xin_nuo_4/: CMakeLists.txt  package.xml
pybullet/urdf/xin_nuo_4/config/: joint_names_xin_nuo_4.yaml
pybullet/urdf/xin_nuo_4/launch/: display.launch  gazebo.launch
pybullet/urdf/xin_nuo_4/meshes/: 1fanban1.STL  1fanban2.STL  1fanban3.STL  1fanban4.STL  2fanban1.STL  2fanban2.STL  2fanban3.STL  2fanban4.STL  base_link.STL  dui_jie_huan.STL  lianjiegan1.STL  lianjiegan2.STL  tian_xian1.STL  tian_xian2.STL  wei_pen_guan.STL  zhuan_zhou1.STL  zhuanzhou_2.STL
pybullet/urdf/xin_nuo_4/urdf/: xin_nuo_4.csv  xin_nuo_4.urdf
results/: base_avel_in_baseMove.npy  base_force_in_baseMove.npy  base_force_in_moveToWorkPose.npy  base_pos_in_baseMove.npy  base_torque.npy  base_torque_in_stopMotion.npy  end_6DoF_force_in_stopMotion.npy  end_pos_in_moveToGraspPoint.npy  (+7 more)
(+24 files in other folders)
